k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-orphanages
spec:
  selector:
    matchLabels:
      app: web-orphanages
  template: 
    metadata:       
      labels:
        app: web-orphanages
    spec:            
      containers:
      - name: web-orphanages
        image: abuosi/web-orphanages:v1
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        volumeMounts:
          - name:  happy-config
            mountPath: /usr/share/nginx/html/config.js
            subPath: config.js
      volumes:
        - name: happy-config
          configMap:
            name: happy-config
