k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-orphanages
spec:
  selector:
    app: web-orphanages
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30002
  type: LoadBalancer
