k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: web-orphanages
spec:
  rules:
  - host: web.happy.local
    http:
      paths:
      - backend:
          serviceName: web-orphanages
          servicePort: 80
